added column comment in articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,8 @@
   <dd><%= @article.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:body) %>:</strong></dt>
   <dd><%= @article.body %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:comment) %>:</strong></dt>
+  <dd><%= @article.comment %></dd>
 </dl>
 
 <div class="form-actions">
