--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="control-group">
-    <%= f.label :comment, :class => 'control-label' %>
+    <%= f.label :body, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :comment, :class => 'text_area' %>
     </div>
